--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -10,6 +10,6 @@
       <%= prototype.catch_copy %>
       <%= prototype.concept %>
     </p>
-    <%= link_to prototype.user.name, prototype_path(prototype.user.id), class: :card__user %>
+    <%= link_to prototype.user.name, user_path(prototype.user_id), class: :card__user %>
   </div>
 </div>
