--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,7 +21,7 @@
         <div class="field">
           <%= f.label :password_confirmation, "パスワード再入力" %><br />
           <%= f.password_field :password_confirmation, id:"user_password_confirmation", autocomplete: "new-password" %>
-          <%= @user.errors[:password_confirmation].any? ? "※パスワードの再入力が間違っています" : "" %>
+          <%= @user.errors[:password_confirmation].any? ? "※パスワードが一致しません" : "" %>
         </div>
 
         <div class="field">
