--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -1,4 +1,10 @@
 <%= form_with model: @prototype, local: true do |f|%>
+  <% if @prototype.errors.any? %>
+    <div>
+      <%= pluralize(@prototype.errors.count, "※空欄があります。") %>
+    </div>
+  <% end %>
+
   <div class="field">
     <%= f.label :title, "プロトタイプの名称" %><br />
     <%= f.text_field :title, id:"prototype_title" %>
